[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Images/IntroSequence/intro3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/IntroSequence/intro1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/IntroSequence/intro2.png" type="Texture" id=3]
[ext_resource path="res://Utilities/IntroSequence.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/NormalTextFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Utilities/Overlays/Textbox.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "scene1"
length = 15.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Scene1/Image1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Scene2/Image2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Scene3/Image3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Scene1/Image1:margin_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -344.0, -64.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Scene1/Image1:margin_top")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -168.0, -70.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Scene1/Image1:margin_right")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -3.0, 52.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Scene1/Image1:margin_bottom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 32.0, -1.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Blackout:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = false
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "method"
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fade_in"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "scene2"
length = 15.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Scene1/Image1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Scene2/Image2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Scene3/Image3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Scene2/Image2:margin_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -135.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Scene2/Image2:margin_top")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -208.0, -72.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Scene2/Image2:margin_right")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 451.0, 2.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Scene2/Image2:margin_bottom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 56.0, 8.0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fade_in"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "scene3"
length = 15.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Scene1/Image1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Scene2/Image2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Scene3/Image3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Scene3/Image3:margin_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 450.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Scene3/Image3:margin_top")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 264.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Scene3/Image3:margin_right")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -450.5 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Scene3/Image3:margin_bottom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -264.0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 12 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "fade_in"
}, {
"args": [  ],
"method": "fade_out"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade in"
length = 2.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Blackout:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade out"
length = 2.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Blackout:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scene1" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image1" type="TextureRect" parent="Scene1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -344.0
margin_top = -168.0
margin_right = -3.0
margin_bottom = 32.0
rect_rotation = 0.0795862
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scene2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Image2" type="TextureRect" parent="Scene2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -208.0
margin_right = 451.0
margin_bottom = 56.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scene3" type="Control" parent="."]
anchor_top = -0.08
anchor_right = 1.0
anchor_bottom = 0.92
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Image3" type="TextureRect" parent="Scene3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 143.06
margin_top = 83.8356
margin_right = -143.06
margin_bottom = -83.8356
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blackout" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogPopup" parent="." instance=ExtResource( 6 )]
margin_top = 128.0

[node name="Extras" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = 0.0439192
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Extras"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="Extras"]
wait_time = 8.0
one_shot = true

[node name="SceneDelay" type="Timer" parent="Extras"]
one_shot = true

[node name="Button" type="Button" parent="Extras"]
visible = false
anchor_left = 0.796875
anchor_top = 0.0666667
anchor_right = 0.970703
anchor_bottom = 0.13
custom_fonts/font = ExtResource( 5 )
text = "Press To Skip"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/scene1 = SubResource( 1 )
anims/scene2 = SubResource( 2 )
anims/scene3 = SubResource( 3 )

[node name="FadeAnimation" type="AnimationPlayer" parent="."]
"anims/fade in" = SubResource( 4 )
"anims/fade out" = SubResource( 5 )

[connection signal="timeout" from="Extras/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Extras/Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Extras/SceneDelay" to="." method="delay_start"]
[connection signal="pressed" from="Extras/Button" to="." method="skip_button"]
